[gd_scene load_steps=2 format=2]

[ext_resource path="res://Core/MainMenu.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Play" type="Button" parent="Main"]
margin_left = 407.293
margin_top = 120.208
margin_right = 522.293
margin_bottom = 161.208
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Button" parent="Main"]
margin_left = 410.515
margin_top = 206.657
margin_right = 520.515
margin_bottom = 253.657
text = "About"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="About"]
anchor_left = 11.738
anchor_top = 12.6219
anchor_right = 11.738
anchor_bottom = 12.6219
margin_right = 67.0
margin_bottom = 30.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="About"]
margin_left = 265.958
margin_top = 64.0883
margin_right = 748.958
margin_bottom = 398.088
text = "... is a series of minigames. 
Each game features different controls, 
but all use either AWSD/Arrow keys, or the mouse.

Game and assets made by PhindieGames."
align = 1
valign = 1
autowrap = true
[connection signal="pressed" from="Main/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Main/About" to="." method="_on_About_pressed"]
[connection signal="pressed" from="About/Back" to="." method="_on_Back_pressed"]
